--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ionic/react": "^6.3.2",
+    "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.2",
-    "ionicons": "^6.0.3",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
