--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.2",
+    "gh-pages": "^4.0.0",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
