--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.7",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.2",
     "localforage": "^1.10.0",
@@ -22,11 +25,11 @@
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.0.23",
+    "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.1.0",
     "gh-pages": "^4.0.0",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "vite": "^3.2.0"
   }
 }
