--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.2",
     "localforage": "^1.10.0",
+    "magic.css": "^1.4.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
