--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^18.11.7",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.2.2",
+    "history": "^5.3.0",
     "localforage": "^1.10.0",
     "magic.css": "^1.4.8",
     "react": "^18.2.0",
