--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-app",
-  "homepage": "https://Tobshub.github.io/Tuu-Duu",
+  "homepage": "https://tuu-duu/netlify.app",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -10,7 +10,6 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "proxy": "http://localhost:2005",
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@types/jest": "^29.2.0",
