--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base=./",
     "preview": "vite preview"
   },
   "dependencies": {
