--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
     "history": "^5.3.0",
     "localforage": "^1.10.0",
