--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "@styles/*": ["./assets/styles/*"],
+      "@images/*": ["./assets/images/*"],
+      "@data/*": ["./data/*"],
+      "@services/*": ["./services/*"],
+      "@UIcomponents/*": ["./components/ui/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
