--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.4.2",
-    "vite-tsconfig-paths": "^4.0.3"
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
-    "@vitejs/plugin-react": "^2.1.0",
+    "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.0"
+    "vite": "^4.0.0",
+    "vite-tsconfig-paths": "^4.0.3"
   }
 }
