--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^18.11.9",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.3"
   }
 }
