--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,12 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "ttsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
     "@types/react-router-dom": "^5.3.3",
@@ -23,12 +24,14 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "ts-safe-cast": "^0.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^3.0.0",
+    "ttypescript": "^1.5.15",
     "typescript": "^4.6.4",
     "vite": "^4.0.0",
     "vite-tsconfig-paths": "^4.0.3"
