--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,11 +3,11 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
+    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "moduleResolution": "Node",
@@ -24,7 +24,8 @@
       "@UIcomponents/*": ["./components/ui/*"],
       "@context/*": ["./components/context/*"],
       "@utils/*": ["./utils/*"]
-    }
+    },
+    "plugins": [{ "transform": "ts-safe-cast/transformer" }]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
