--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,10 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "ttsc && vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rollup/plugin-typescript": "^11.0.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
@@ -19,14 +18,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.4.2",
-    "ts-safe-cast": "^0.1.5"
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^3.0.0",
-    "ttypescript": "^1.5.15",
     "typescript": "^4.6.4",
     "vite": "^4.0.0",
     "vite-tsconfig-paths": "^4.0.3"
