--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
 
     /* Language and Environment */
     "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "rootDir": "./src",
 
     /* Modules */
     "module": "CommonJS" /* Specify what module code is generated. */,
