--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./dist/index.js",
     "build": "npm i && tsc",
-    "dev": "concurrently \"tsc --watch\" \"nodemon ./dist/index.js\" "
+    "dev": "nodemon src/index.ts"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -13,13 +13,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.2"
+    "mongoose": "^6.7.2",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
-    "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.3"
